--- a/src/main/resources/web/WEB-INF/templates/CustomerHomePage.html
+++ b/src/main/resources/web/WEB-INF/templates/CustomerHomePage.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+    <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       lang="en" th:lang="it" xmlns:th="http://www.thymeleaf.org">
 <head>
@@ -6,8 +6,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link crossorigin="anonymous"
+          href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+          rel="stylesheet">
 
     <title>Home</title>
 </head>
@@ -30,7 +32,7 @@
                 <th th:text="${offer.validityPeriod}"></th>
                 <th th:text="${offer.monthlyFee}"></th>
                 <th>
-                    <a th:href="@{/BuyOffer(id_offer=${offer.id})}" type="button" class="btn btn-primary">$$$</a>
+                    <a class="btn btn-primary" th:href="@{/CustomizeOrder(id_offer=${offer.id})}" type="button">$$$</a>
                 </th>
             </tr>
             </tbody>
