--- a/src/main/resources/web/WEB-INF/templates/SignInPage.html
+++ b/src/main/resources/web/WEB-INF/templates/SignInPage.html
@@ -29,10 +29,11 @@
                     <input type="checkbox" class="form-check-input" id="employee" name="employee_role">
                     <label class="form-check-label" for="employee">I am an employee</label>
                 </div>
+                <input checked hidden name="paymentInProgress" th:if="${paymentInProgress}" type="checkbox">
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
-            <p class="mt-3">You're not registered?
-                <a href="SignUp" >Click here to Sign Up</a></p>
+            <p class="mt-3" th:unless="${errorMsg}">You're not registered?
+                <a href="SignUp">Click here to Sign Up</a></p>
             <p class = "text-danger" th:text="${errorMsg}"></p>
         </div>
     </div>
