implemented feature to show username in views, fixed servlet method to access to resources html

--- a/src/main/resources/web/WEB-INF/templates/PaymentPage.html
+++ b/src/main/resources/web/WEB-INF/templates/PaymentPage.html
@@ -14,6 +14,9 @@
     <title>Payment Result</title>
 </head>
 <body>
+<nav class="navbar navbar-expand-lg navbar-light bg-light"
+     th:replace="fragments/navbar :: navbar">
+</nav>
     <div th:text="${result}"></div>
 </body>
 </html>
