--- a/src/main/resources/web/WEB-INF/templates/CustomizeOrderPage.html
+++ b/src/main/resources/web/WEB-INF/templates/CustomizeOrderPage.html
@@ -14,7 +14,9 @@
     <title>Optional Product</title>
 </head>
 <body>
-
+<nav class="navbar navbar-expand-lg navbar-light bg-light"
+     th:replace="fragments/navbar :: navbar">
+</nav>
 <div class="row mt-5 justify-content-center">
     <div class="col-5 mx-5">
         <div class="row">
