--- a/src/main/resources/web/WEB-INF/templates/fragments/navbar.html
+++ b/src/main/resources/web/WEB-INF/templates/fragments/navbar.html
@@ -1,33 +1,26 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-  <meta charset="UTF-8">
-  <title>Title</title>
-</head>
-<body>
-<nav class="navbar navbar-expand navbar-dark bg-dark" th:fragment="navbar">
-  <a class="navbar-brand" href="/" th:href="@{/}">Home</a>
-  <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
-          class="navbar-toggler"
-          data-target="#navbarSupportedContent" data-toggle="collapse" type="button">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul th:unless="${user!=null}" class="navbar-nav ml-auto">
-      <li class="nav-item">
-        <a class="nav-link" th:href="@{/Logout}">Logout</a>
-      </li>
-    </ul>
-    <ul th:if="${user!=null}" class="navbar-nav ml-auto">
-      <li class="nav-item">
-      <a class="nav-link" th:text="${user.getName()}">Paolo</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" th:href="@{/Logout}">Logout</a>
-    </li>
-  </ul>
-  </div>
+<nav class="navbar navbar-expand-lg navbar-light bg-light" th:fragment="navbar">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="/" th:href="@{/}">Home</a>
+        <button aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"
+                data-bs-target="#navbarNav" data-bs-toggle="collapse" type="button">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="d-flex">
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav" th:unless="${user!=null}">
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="@{/SignIn}">SignIn</a>
+                    </li>
+                </ul>
+                <ul class="navbar-nav" th:if="${user!=null}">
+                    <li class="nav-item">
+                        <a class="nav-link" th:text="${user.getUsername()}">Paolo</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="@{/Logout}">Logout</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
 </nav>
-</body>
-</html>
